syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "MemberService.proto";
option java_multiple_files = true;
option csharp_namespace = "GrpcNjordClient.Team";
package com.sep3yg9.njorddata.grpc.protobuf.team;

// Allow to create a team with only name and a team leader.
message CreatingTeam {
  string name = 1;
  int32 teamLeaderId = 2;
}

// Allow to update name, team leader and members of a team.
message UpdatingTeam {
  int32 id = 1;
  string name = 2;
  com.sep3yg9.njorddata.grpc.protobuf.member.MemberGrpc teamLeader = 3;
  repeated com.sep3yg9.njorddata.grpc.protobuf.member.MemberGrpc members = 4;
}

//  Basic version of Team, with reference of Id, name of the team and full name of the teamleader
message BasicTeam {
  int32 id = 1;
  string name = 2;
  string teamLeaderName = 3;
}

//  Full version of Team, together with full model of Team Leader and members as list
message TeamGrpc {
  int32 id = 1;
  string name = 2;
  com.sep3yg9.njorddata.grpc.protobuf.member.MemberGrpc teamLeader = 3;
  repeated com.sep3yg9.njorddata.grpc.protobuf.member.MemberGrpc members = 4;
}

// List of basic teams
message TeamList {
  repeated BasicTeam team = 1;
}

/*
  Services for Team model
 */
service TeamService {
  // CreateTeam will create a team and return it.
  rpc CreateTeam(CreatingTeam) returns (TeamGrpc);
  // DeleteTeam will delete a specific team through the ID sent on parameter.
  rpc DeleteTeam(google.protobuf.Int32Value) returns (google.protobuf.Empty);
  // UpdateTeam will update a team with new information.
  rpc UpdateTeam(UpdatingTeam) returns (google.protobuf.Empty);
  // GetById will return a team which Name is the same as the one sent in arguments.
  rpc GetByName(google.protobuf.StringValue) returns (TeamGrpc);
  // GetById will return a team which ID is the same as the one sent in arguments.
  rpc GetById(google.protobuf.Int32Value) returns (TeamGrpc);
  // GetById will return a list of teams which specific user is part of.
  rpc GetByUserId(google.protobuf.Int32Value) returns (TeamList);
}